Fixed alignment

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footerBig{
     display: flex;
     flex-direction: column;
-    margin-top:30px;
+    margin-top:38px;
     align-items: center;
     background-color:white;
     padding:20px 0px;
